# cr_soles_fastapi

./: .gitignore  Dockerfile  README.md  db_creation.sql  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20260127_0001_initial_schema.py  20260214_0001_papers_staging_idx_and_fk.py  a661a205fc45_first_alembic_commit.py  c1cf20366dd8_add_papers_staging.py  e2e8ee41b283_revise_papers_staging.py  e931ea39f86d_add_papersstaging_table.py
app/: main.py
app/clients/: embedding_client.py  ollama_client.py  vllm_client.py
app/core/: config.py  db.py  logger.py  prompts.py
app/enums/: multimodal_extraction.py
app/enums/multimodal_extraction/: enums.py
app/enums/paper_review/: enums.py
app/langgraph/: __init__.py  graph.py  state.py
app/langgraph/cr_extraction/: graph.py  state.py
app/langgraph/multimodal_extraction/: __init__.py  graph.py  state.py
app/models/: __init__.py  agents_log.py  agents_logs.py  evaluation.py  evaluations.py  extraction.py  extractions.py  paper.py  papers.py  papers_staging.py
app/prompts/: cr_extraction.py
app/repositories/: papers_repository.py  papers_staging_repository.py
app/routers/: cr_extraction_route.py  document_process.py  document_process_route.py  multimodal_extraction.py  multimodal_extraction_route.py  paper_review_route.py
app/schemas/: common.py  cr_extraction.py
app/services/: cr_extraction.py  multimodal_extraction.py  paper_review.py  service.py
app/utils/: embedding.py  stream_invoke.py
supabase/: config.toml
(+21 files in other folders)
