[project]
name = "cr-soles-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "pymupdf>=1.24.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.30",
    "uvicorn>=0.30.0",
]
